[package]
name = "code-deploy-after-install"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.15.0", default-features = false, features = ["codedeploy"] }

lambda_runtime = "0.10.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
aws-config = { version = "1.1.7",  features = ["behavior-version-latest"] }
aws-sdk-codedeploy = "1.16.0"
reqwest = "0.11.24"
openssl = {  version = "0.10.64" , features = ["vendored"]}

